[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "time"] }
axum = { version = "0.7", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace","cors","compression","request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
thiserror = "1.0"
